--- a/.github/workflows/pr-square-api.yaml
+++ b/.github/workflows/pr-square-api.yaml
@@ -1,5 +1,8 @@
-name: Test on PR
-on: [pull_request]
+name: Test square-api on PR
+on:
+  pull_request:
+    paths:
+      - 'square-api/**'
 jobs:
   test:
     runs-on: ubuntu-latest
@@ -26,6 +29,6 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-      - name: Test with pytest
+      - name: Test Square API with pytest
         run: |
-          pytest -v test.py
+          pytest -v square-api/test.py
